# 68000-starfighters

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md
res/: generate_boss_patterns.py  generate_interwave.py  generate_terrain.py  generate_waves.py  resources.res  waves.txt
res/gfx/: generate_hitmasks.py  generate_intro.py  generate_placeholders.py  intro_crawl_text.txt  title.act
res/gfx/fonts/: CREDITS.txt
res/music/: gameover.vgm  intro.vgm  title.vgm
res/music/boss/: fairlight - placid_vision.vgm
res/music/ingame/: bodykiss.vgm  starworx.vgm  trust elephant.vgm
src/: bgstarfield.c  bgstarfield.h  boss.c  boss.h  boss_mask_generated.h  boss_patterns_generated.h  bullet.c  bullet.h  collision.c  collision.h  enemy.c  enemy.h  enemy_big_mask_generated.h  explosion.c  explosion.h  formation.c  formation.h  game.h  highscore.c  highscore.h  interwave_generated.h  intro.c  intro.h  intro_crawl_generated.h  main.c  music.c  music.h  options.c  options.h  player.c  player.h  powerup.c  powerup.h  rom_header.c  score.c  score.h  settings.h  sfx.c  sfx.h  terrain.c  (+7 more)
